fixed white intro planet on mobile overlapping text

--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -64,6 +64,6 @@
 }
 
 .planet__orbiter {
-  transform-origin: 250px -80px;
+  transform-origin: 150px -150px;
   animation:  10s infinite linear orbit;
 }
